Fixed header/footer display on mobile

--- a/styles/skeleton.css
+++ b/styles/skeleton.css
@@ -173,20 +173,7 @@
 
 
 
-@media screen and (max-width: 1004px) {
-  #main_content_wrapper {
-    width: 550px;
-  }
-  #yoyo_detail_wrapper {
-    margin-top: 10px;
-  }
 
-  #yoyo_selection_wrapper {
-    margin: 0px 5px;
-  }
-
-
-}
 
 
 
